[package]
name = "scionpings"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
rand = "0.9.2"
scion-proto = "0.4.0"
scion-stack = "0.4.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.5.7"
